--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
         "moment-timezone": "^0.5.34",
         "next": "10",
         "next-redux-wrapper": "^6.0.2",
+        "node-html-markdown": "^1.3.0",
         "node-sass": "^5.0.0",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-facebook-pixel": "^1.0.4",
         "react-redux": "^7.2.2",
         "react-slick": "^0.27.13",
+        "react-toc": "^3.1.0",
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.8",
         "redux-thunk": "^2.3.0",
