update_seo_layout

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
 # App Config
 PORT=3000
-NODE_ENV=development
+NODE_ENV=production
 
 # Api Config
 API_URL=https://api.cocolux.com
-API_URL_TEST=https://api-test.cocolux.com
+API_URL_TEST=https://api.cocolux.com
 
 # Base Config
 BASE_URL=https://cocolux.com
-BASE_URL_TEST=https://web-test.cocolux.com
+BASE_URL_TEST=https://cocolux.com
 
 # Cdn config
 IMAGE_URL=https://cdn.cocolux.com
-IMAGE_URL_TEST=https://cdn-test.cocolux.com
+IMAGE_URL_TEST=https://cdn.cocolux.com
